fix item scaling on sidbar stretch

--- a/src/css/catalog-page.css
+++ b/src/css/catalog-page.css
@@ -395,6 +395,7 @@
 .catalog-page__filter{
     display: flex;
     flex-direction: column;
+    grid-row: 1 / 3;
     grid-column: 1 / 4;
     background-color: #212121;
 }
@@ -468,7 +469,6 @@
 }
 /* Золотистое подчеркивание */
 .filter-criteria_range .filter-criteria__option-underline {
-    content: '';
     position: absolute;
     top: 90%;
     left: 0;
@@ -604,12 +604,11 @@
   grid-column: 4 / 13;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, 1fr);
   column-gap: 20px;
   row-gap: 20px;
 }
 
-.catalog-page__item {
+.item {
   background-color: #212121;
   border-radius: 10px;
   display: flex;
@@ -695,7 +694,8 @@
 /* pagination */
 
 .pagination{
-  grid-column: 4 / 13;
+  align-self: start;
+  grid-column: 1 / 3;
   text-align: center;
   margin: 20px 0;
   font-size: 14px;
@@ -730,3 +730,5 @@
 }
 
 /* pagination ends */
+
+
